vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = "172.20.0.0/16"

  tags = {
    Name = format("%s-%s-vpc", var.dns_name, var.account_environment)
  }
}

resource "aws_subnet" "public-subnet-1" {
    vpc_id = "${aws_vpc.main.id}"
    cidr_block = "172.20.10.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = var.availability_zones[0]
    tags = {
        Name = format("%s-%s-public-subnet-1", var.dns_name, var.account_environment)
    }
}

resource "aws_subnet" "public-subnet-2" {
    vpc_id = "${aws_vpc.main.id}"
    cidr_block = "172.20.11.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = var.availability_zones[1]
    tags = {
        Name = format("%s-%s-public-subnet-2", var.dns_name, var.account_environment)
    }
}

resource "aws_subnet" "public-subnet-3" {
    vpc_id = "${aws_vpc.main.id}"
    cidr_block = "172.20.12.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = var.availability_zones[2]
    tags = {
        Name = format("%s-%s-public-subnet-3", var.dns_name, var.account_environment)
    }
}
